--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="110" height="110"/>
                                 <connections>
-                                    <outlet property="labelKana" destination="MaT-TL-2SP" id="ucl-WJ-ona"/>
+                                    <outlet property="label" destination="MaT-TL-2SP" id="ucl-WJ-ona"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -120,6 +120,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V3r-IN-pGx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ora-29-1rk"/>
@@ -308,7 +311,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.90980392156862744" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="DBh-ey-jzh"/>
                                     <constraint firstAttribute="trailing" secondItem="bUq-p2-AoA" secondAttribute="trailing" id="Eli-4S-HsG"/>
@@ -351,7 +354,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.90980392156862744" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="zKr-ng-Jgf" firstAttribute="top" secondItem="1Ej-Fp-daP" secondAttribute="top" constant="8" id="0LU-nN-XXK"/>
                                     <constraint firstAttribute="trailing" secondItem="zKr-ng-Jgf" secondAttribute="trailing" constant="8" id="1V5-CN-2Sc"/>
@@ -370,14 +373,17 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="hT6-c1-btQ"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="s0A-lI-e2E"/>
                                 </constraints>
-                                <state key="normal" title="-1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="-1">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="previousButton:" destination="l8d-ht-EgW" eventType="touchUpInside" id="0fN-6j-NPY"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dbf-8q-gtw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dbf-8q-gtw">
                                 <rect key="frame" x="15" y="221" width="384" height="433"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="UQr-xd-bfv" customClass="DetailTableViewCell" customModule="Project" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="384" height="29.666666030883789"/>
@@ -432,7 +438,10 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYJ-rk-bcl">
                                 <rect key="frame" x="349" y="671" width="50" height="50"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <state key="normal" title="+1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="+1">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="nextButton:" destination="l8d-ht-EgW" eventType="touchUpInside" id="zwG-Zb-kU8"/>
                                 </connections>
