--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kSc-ix-vbl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kSc-ix-vbl">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -55,6 +55,10 @@
                         <viewLayoutGuide key="safeArea" id="K4U-Mk-xYW"/>
                     </view>
                     <navigationItem key="navigationItem" title="Kana" id="Nvl-bI-YOh"/>
+                    <connections>
+                        <outlet property="hiraganaButtom" destination="hhx-ld-xxC" id="JJW-TW-6GD"/>
+                        <outlet property="katakanaButtom" destination="J7U-Qa-d7m" id="zhQ-o9-RTD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="86a-R3-Vb2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -291,6 +295,14 @@
                         <viewLayoutGuide key="safeArea" id="CA0-dh-3dx"/>
                     </view>
                     <navigationItem key="navigationItem" title="Kanji" id="cFe-8Y-aLK"/>
+                    <connections>
+                        <outlet property="allKanjiButtom" destination="pyO-zi-ECZ" id="AoP-1k-9vA"/>
+                        <outlet property="n1KanjiButtom" destination="EMj-gD-URT" id="m70-7j-hUJ"/>
+                        <outlet property="n2KanjiButtom" destination="fUE-zH-6XL" id="Lya-Jt-aUQ"/>
+                        <outlet property="n3KanjiButtom" destination="jrl-UI-Bz6" id="Kb6-7P-Ofi"/>
+                        <outlet property="n4KanjiButtom" destination="gzV-SS-PiB" id="01n-S4-nRE"/>
+                        <outlet property="n5KanjiButtom" destination="gFc-od-7tV" id="Y48-31-7bs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RD2-mo-vl2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -450,7 +462,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="PPe-NL-NzD" firstAttribute="bottom" secondItem="UYJ-rk-bcl" secondAttribute="bottom" constant="15" id="1Cm-dB-vPt"/>
                             <constraint firstItem="1Ej-Fp-daP" firstAttribute="leading" secondItem="H3G-V1-QY9" secondAttribute="trailing" constant="5" id="4KW-XD-UiT"/>
@@ -489,6 +501,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="B2C-QD-kzL"/>
+        <segue reference="EIA-PL-4qz"/>
     </inferredMetricsTieBreakers>
 </document>
