--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -401,26 +401,26 @@
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="UQr-xd-bfv" customClass="DetailTableViewCell" customModule="Project" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="384" height="29.666666030883789"/>
+                                        <rect key="frame" x="0.0" y="28" width="384" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UQr-xd-bfv" id="UXH-xa-zWt">
-                                            <rect key="frame" x="0.0" y="0.0" width="384" height="29.666666030883789"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="384" height="30"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="漢字" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBY-9B-PcP">
-                                                    <rect key="frame" x="10" y="7.3333333333333339" width="32.666666666666664" height="19.333333333333329"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="漢字" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBY-9B-PcP">
+                                                    <rect key="frame" x="10" y="7.6666666666666661" width="32.666666666666664" height="19.333333333333336"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кандзи, название японских иероглифов" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujw-Qd-svr">
-                                                    <rect key="frame" x="47.666666666666657" y="5" width="321.33333333333337" height="19.666666666666668"/>
+                                                    <rect key="frame" x="47.666666666666657" y="5" width="321.33333333333337" height="20"/>
                                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRy-S7-vXX">
-                                                    <rect key="frame" x="10" y="0.33333333333333304" width="32.666666666666664" height="9.6666666666666679"/>
+                                                    <rect key="frame" x="10" y="0.66666666666666696" width="32.666666666666664" height="9.6666666666666643"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -434,6 +434,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="ujw-Qd-svr" secondAttribute="trailing" constant="15" id="QZ1-yr-JCa"/>
                                                 <constraint firstItem="ujw-Qd-svr" firstAttribute="top" secondItem="UXH-xa-zWt" secondAttribute="top" constant="5" id="T0d-VK-61L"/>
                                                 <constraint firstItem="mRy-S7-vXX" firstAttribute="trailing" secondItem="tBY-9B-PcP" secondAttribute="trailing" id="T1x-wn-ycm"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tBY-9B-PcP" secondAttribute="bottom" constant="2.9999993642171248" id="d7m-yt-S6N"/>
                                                 <constraint firstItem="tBY-9B-PcP" firstAttribute="top" secondItem="mRy-S7-vXX" secondAttribute="bottom" constant="-2.6666666666666288" id="jQT-zU-77b"/>
                                                 <constraint firstItem="ujw-Qd-svr" firstAttribute="leading" secondItem="tBY-9B-PcP" secondAttribute="trailing" constant="5" id="zSE-7F-izZ"/>
                                             </constraints>
